--- a/web-ui/src/main/resources/catalog/views/default/templates/home.html
+++ b/web-ui/src/main/resources/catalog/views/default/templates/home.html
@@ -1,5 +1,6 @@
 <!-- <div> -->
   <div class="row gn-row-main">
+    <div>test</div>
     <div data-ng-class="fluidLayout ? 'container-fluid' : 'container'">
       <div class="col-md-offset-1 col-md-10 col-lg-8 col-lg-offset-2">
 
